# dummy-editor

./: .gitignore  CMakeLists.txt  build.sh  dracula.json  rebuild.bat
src/: CodeEditor.cpp  CodeEditor.h  Highlighter.cpp  Highlighter.h  MainWindow.cpp  MainWindow.h  WelcomeWidget.h  main.cpp
src/components/: CodeEditor.cpp  CodeEditor.h  CommonTooltip.cpp  CommonTooltip.h  CustomRichTextBoard.cpp  CustomRichTextBoard.h  DiffViewDialog.cpp  DiffViewDialog.h  EditorArea.cpp  EditorArea.h  ImageCropDialog.cpp  ImageCropDialog.h  ImageResizeWidget.cpp  ImageResizeWidget.h  PasteAwareEditor.cpp  PasteAwareEditor.h  ProjectSidebar.cpp  ProjectSidebar.h  RichTextEditor.cpp  RichTextEditor.h
src/core/: Highlighter.cpp
src/utils/: DiffHelpers.cpp  DiffHelpers.h
